<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="45dp"
    tools:context=".activity.SignUpActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/instagram_text_black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="3"
        android:paddingBottom="4dp"
        android:text="@string/sign_up_description"
        android:textColor="@color/terms"
        android:textSize="16sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_stroke"
        android:focusedByDefault="false"
        android:gravity="left|center_vertical"
        android:hint="@string/email"
        android:paddingLeft="20dp"
        android:textColorHint="@color/textGray"
        android:visibility="visible" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_stroke"
        android:focusedByDefault="false"
        android:gravity="left|center_vertical"
        android:hint="@string/full_name"
        android:paddingLeft="20dp"
        android:textColorHint="@color/textGray"
        android:visibility="visible" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/edittext_stroke"
        android:focusedByDefault="false"
        android:gravity="left|center_vertical"
        android:hint="@string/hint_user_name"
        android:paddingLeft="20dp"
        android:textColorHint="@color/textGray" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edittext_stroke"
        android:focusedByDefault="false"
        android:gravity="left|center_vertical"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textAllCaps="false"
        android:textColorHint="@color/textGray" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/signin_singup_green"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#d0ffffff"
        android:textSize="17sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/policy"
        android:textColor="@color/terms"
        android:textSize="16sp"
        android:visibility="visible" />


</LinearLayout>